--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,10 @@
   <!-- add to homescreen for ios -->
   <meta name="mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+  
+  <!-- Location permissions -->
+  <meta name="geo.region" content="*" />
+  <meta name="geo.placename" content="*" />
 </head>
 
 <body>
