--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,8 @@
 
   <link rel="icon" type="image/png" href="assets/icon/favicon.png" />
 
-  <!-- Google Fonts - Roboto -->
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <!-- Google Fonts - Roboto (commented out for deployment) -->
+  <!-- <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;600;700&display=swap" rel="stylesheet"> -->
 
   <!-- add to homescreen for ios -->
   <meta name="mobile-web-app-capable" content="yes" />
