--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,9 @@
   <!-- Location permissions -->
   <meta name="geo.region" content="*" />
   <meta name="geo.placename" content="*" />
+  
+  <!-- Google Maps API -->
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAyVxo4VBkkAZFkr2t4Jm3UwnVOBakyghI&libraries=places" async defer></script>
 </head>
 
 <body>
